<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_msg">

    <fragment
        android:id="@+id/navigation_msg"
        android:name="com.josem111.ui.msg.MsgFragment"
        android:label="@string/title_msg"
        tools:layout="@layout/fragment_msg" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.josem111.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

        <fragment
            android:id="@+id/navigation_data"
            android:name="com.josem111.ui.data.DataFragment"
            android:label="@string/title_data"
            tools:layout="@layout/fragment_data" />
</navigation>